--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "ink-common-components",
-	"version": "0.0.0",
+	"name": "waseas-ink-components",
+	"version": "0.0.3",
 	"license": "MIT",
 	"bin": "dist/cli.js",
 	"type": "module",
@@ -10,7 +10,8 @@
 	"scripts": {
 		"build": "tsc",
 		"dev": "tsc --watch",
-		"test": "prettier --check . && xo && ava"
+		"test": "prettier --check . && xo && ava",
+		"start": "tsc && ink-common-components"
 	},
 	"files": [
 		"dist"
