--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"build": "tsc",
 		"dev": "tsc --watch",
 		"test": "prettier --check . && xo && ava",
-		"start": "tsc && ink-common-components"
+		"start": "tsc && node ./dist/cli.js"
 	},
 	"files": [
 		"dist"
